--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital@0;1&family=Noto+Sans+Mono:wght@400;700&family=Noto+Sans:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
+@import url('./fonts/font.css');
 
 :root {
-    --ui-header-height: 48px;
+    --ui-header-height: 52px;
     --editor-width: 800px;
 }
 
@@ -42,6 +43,8 @@
     --ui-accent-color-transparent: #ff00ff61;
     --editor-modifier-selected-blur: #e0e0e0;
     --editor-modifier-selected: #b9d3ff;
+    --ui-err-red: #ff2958;
+    --ui-err-red-transparent: #ff295858;
 }
 
 .ui-theme-dark {
@@ -129,9 +132,18 @@ body {
     width: 100%;
     height: 100vh;
     padding: 0;
-    font-family: 'Noto Sans', sans-serif;
+    font-family: 'Noto Serif', sans-serif;
     color: var(--editor-text-primary);
     overflow: hidden !important;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: 'Thestral', serif;
 }
 
 #app-container {
@@ -248,9 +260,10 @@ svg {
     position: absolute;
     background: rebeccapurple;
     right: 0;
-    top:74px;
+    top: 74px;
     overflow: visible;
 }
+
 .document-marker {
     position: absolute;
     background: var(--ui-accent-color);
@@ -277,9 +290,9 @@ svg {
     background: transparent !important;
     min-height: calc(100vh - 100px);
 }
+
 .EasyMDEContainer {
     position: relative;
-    
     z-index: 10 !important;
 }
 
@@ -291,6 +304,7 @@ svg {
     padding: 74px 54px !important;
     background: transparent !important;
 }
+
 .editor-preview-full {
     position: relative !important;
 }
@@ -321,6 +335,7 @@ svg {
 .EasyMDEContainer .CodeMirror-selected {
     background: transparent !important;
 }
+
 .editor-preview-active:focus {
     outline: none;
 }
@@ -356,7 +371,8 @@ code {
     border-radius: 4px;
     overflow-x: auto;
 }
-.editor-preview pre code{
+
+.editor-preview pre code {
     border: none !important;
     padding: 0 !important;
 }
@@ -364,30 +380,40 @@ code {
 img {
     max-width: 100%;
 }
+
 table {
     width: 100%;
-    overflow: hidden;                
-    border-collapse: collapse; 
+    overflow: hidden;
+    border-collapse: collapse;
     border-radius: 5px;
     background: var(--background-primary);
     margin-bottom: 15px;
-    box-shadow: 1px 1px 0px var(--background-modifier-border), -1px -1px 0px var(--background-modifier-border), -1px 1px 0px var(--background-modifier-border), 1px -1px 0px var(--background-modifier-border) ;
+    box-shadow: 1px 1px 0px var(--background-modifier-border), -1px -1px 0px var(--background-modifier-border), -1px 1px 0px var(--background-modifier-border), 1px -1px 0px var(--background-modifier-border);
 }
-table td, table th{
+
+table td,
+table th {
     border: 1px solid var(--background-modifier-border) !important;
 }
-table th:first-child, table td:first-child {
+
+table th:first-child,
+table td:first-child {
     border-left: none !important;
 }
-table th:last-child, table td:last-child {
+
+table th:last-child,
+table td:last-child {
     border-right: none !important;
 }
+
 table tr:last-child td {
     border-bottom: none !important;
 }
+
 table th {
     border-top: none !important;
 }
+
 table thead {
     background: var(--background-primary-alt);
 }
@@ -446,10 +472,11 @@ table thead {
 }
 
 #ribbon-logo {
-    position:relative;
+    position: relative;
     height: 35px;
     width: fit-content;
 }
+
 #ribbon-logo svg {
     width: auto;
     height: 100%;
@@ -613,4 +640,93 @@ table thead {
     gap: 4px;
     align-items: center;
     flex-direction: row;
+}
+
+
+.auth-ui-main {
+    width: 100%;
+    max-width: 500px;
+    position: absolute;
+    background: var(--background-primary);
+    left:50%; top:50%;
+    transform: translate(-50%,-50%);
+    padding: 40px;
+    box-sizing: border-box;
+    border-radius: 20px;
+}
+
+.auth-ui-main h1 {
+    font-size: 45px;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.auth-ui-bg {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.auth-ui-bg img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+form {
+    display: flex;
+    flex-direction: column;
+}
+
+.form-group input {
+    width: 100%;
+    box-sizing: border-box;
+    padding: 12px 10px;
+    font-size: 16px;
+    font-family: "Noto Serif";
+    outline: none;
+    border: 1px solid var(--background-modifier-border);
+    color: var(--ui-text-primary);
+    border-radius: 5px;
+    background: var(--background-primary-alt);
+}
+
+input[type="submit"] {
+    background: #f2925b;
+    margin: auto;
+    margin-top: 20px;
+    border:none;
+    padding: 12px 25px;
+    border-radius: 5px;
+    font-size: 16px;
+    margin-bottom: 20px;
+    width: fit-content  ;
+    cursor: pointer;
+}
+.auth-err-area {
+    display: none;
+    border: 2px solid var(--ui-err-red) !important;
+    background: var(--ui-err-red-transparent) !important;
+}
+form .dialog {
+    
+    width: 100%;
+    box-sizing: border-box;
+    padding: 12px 10px;
+    font-size: 16px;
+    font-family: "Noto Serif";
+    outline: none;
+    border: 1px solid var(--background-modifier-border);
+    border-radius: 5px;
+    text-align: center;
+}
+
+.ui-input-error {
+    border: 2px solid var(--ui-err-red) !important;
+    background: var(--ui-err-red-transparent) !important;
+    box-sizing: border-box;
+}
+.form-group p {
+    margin-bottom: 5px;
 }
